--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
 	"description": "Curso de Codely - CSS Grid",
 	"main": "index.js",
 	"scripts": {
-		"build": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack --config webpack.prod.ts",
 		"dev": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack serve --config webpack.dev.ts --stats-error-details",
+		"preview": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack --config webpack.prod.ts && npx http-server ./build --gzip",
+		"build": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack --config webpack.prod.ts",
 		"prepare": "husky install",
 		"lint": "npx eslint ./**.{js,mjs,cjs,ts,mts}",
 		"lint:fix": "npx eslint --fix ./**.{js,mjs,cjs,ts,mts}",
@@ -68,6 +69,7 @@
 		"glob-all": "^3.3.1",
 		"html-loader": "^4.2.0",
 		"html-webpack-plugin": "^5.5.3",
+		"http-server": "^14.1.1",
 		"husky": "^8.0.0",
 		"lint-staged": "^14.0.1",
 		"postcss": "^8.4.30",
